test/deprecated/rangeDomainDeprecations.good
rangeDomainDeprecations.chpl:3: error: 'domain.dist' is no longer supported, use 'domain.distribution' instead
