test/deprecated/rangeDomainDeprecations.chpl
// Testing .dist deprecation
const d1 = {1..5};
writeln(d1.dist);
